# robologger

./: .gitignore  .gitmodules  README.md  benchmark_depth_encoding.py  pyproject.toml
examples/: README.md  camera_loop.py  gripper_control_loop.py  joint_arm_control_loop.py  main_process.py  robot_control_loop.py
robolog/: get_logger.py
robolog/loggers/: base_logger.py  cartesian_ctrl_logger.py  joint_ctrl_logger.py  main_logger.py  sensor_logger.py  video_logger.py
robolog/utils/: huecodec.py
robologger/: __init__.py  classes.py  get_logger.py
robologger/loggers/: base_logger.py  cartesian_ctrl_logger.py  ctrl_logger.py  generic_logger.py  joint_ctrl_logger.py  main_logger.py  mobile_base_logger.py  robot_ctrl_logger.py  sensor_logger.py  video_logger.py
robologger/scripts/: aggregate_data.py  interpolate_raw_robologger_data.py  merge_videos.py
robologger/scripts/rerun_visualization/: base_visualizer.py  rerun_visualizer.py  visualize_robologger_episode.py
robologger/utils/: classes.py  color_convert.py  data_aggregator.py  huecodec.py  stdout_setup.py
tests/: test_cartesian_ctrl_logger.py  test_main_logger.py  test_time_monotonic.py  test_video_logger.py
tests/mobile_base/: MOBILE_BASE_LOGGER_USAGE.md  README.md  run_all_modes_test.sh  run_multiprocess_test.sh  test_all_modes_main_logger.py  test_main_logger.py  test_mixed.py  test_pose_only.py  test_state_vel_only.py  test_velocity_only.py  test_with_velocity.py
wheels/: upload_to_pypi.sh
