[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "robologger"
version = "0.1.2"
description = ""
authors = [
    { name = "Yihuai Gao", email = "yihuai@stanford.edu" },
    { name = "Jinyun Liu", email = "jeffliu0@stanford.edu" },
]
dependencies = [
    "numpy",
    "zarr>=2.16.0,<3.0.0",
    "loguru",
    "robotmq",
    "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robologger*"]


[project.urls]
Homepage = "https://github.com/yihuai-gao/robolog"
